--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="container">
         <!--logo-->
         <a href="#" class="logo">
-            <img src="img\logo.png" alt="La Femme Logo">
+            <img src="img\logo2.png" alt="La Femme Logo">
           </a>
           <input type="text" class="search-input" placeholder="ابحث هنا...">
 
