--- a/services.html
+++ b/services.html
@@ -6,7 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>خدماتنا - La Femme</title>
     <link rel="stylesheet" href="style.css">
-
+<!-- Font Awesome للأيقونات -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap" rel="stylesheet">
     <style>
 body {
@@ -317,6 +320,38 @@ body {
 
     </div>
 </div>
+<!-- Footer -->
+
+<footer class="footer">
+    <div class="container7">
+        <div class="column">
+            <h3 id="contact-title">Contact Information</h3>
+            <p>📞 <span id="phone-text">Phone:</span> <a href="tel:01212348798">01212348798</a></p>
+            <p>📞 <span id="phone-text">Phone:</span> <a href="tel:01017102110">01017102110</a></p>
+        </div>
+        <div class="column">
+            <h3 id="important-links">Important Links</h3>
+            <a href="#" id="privacy-policy">Privacy Policy</a>
+            <br>
+            <a href="#" id="terms-of-use">Terms of Use</a>
+        </div>
+        <div class="column social">
+            <h3 id="follow-us">Follow Us</h3>
+            <a href="https://www.facebook.com/share/16AodzZejo/"> <i class="fab fa-facebook-f"></i></a>
+
+
+            <br>
+            <a href="https://www.instagram.com/lafemme_woman?igsh=ejhuY3IybGpxanM4"> <i
+                    class="fab fa-instagram"></i></a>
+            <br>
+            <a href="https://www.tiktok.com/@osama.elbannan?_t=ZS-8uchrhB8KzY&_r=1" target="_blank"><i
+                    class="fab fa-tiktok"></i></a>
+        </div>
+    </div>
+    <div class="copyright">
+        &copy; 2025 <span id="all-rights">All Rights Reserved</span> | <span id="kgm-marketing">KGM Marketing</span>
+    </div>
+</footer>
     <!-- Flip Animation -->
     <script>
         setInterval(() => {
