--- a/contact.html
+++ b/contact.html
@@ -201,15 +201,15 @@
             <div class="contact-details">
                 <div class="detail">
                     <h3><i class="fas fa-map-marker-alt"></i> العنوان</h3>
-                    <p>شارع المثال، مدينة المثال، الدولة</p>
+                    <p>شارع بورسعيد </p>
                 </div>
                 <div class="detail">
                     <h3><i class="fas fa-phone"></i> الهاتف</h3>
-                    <p>+1234567890</p>
+                    <p>01212348798</p>
                 </div>
                 <div class="detail">
                     <h3><i class="fas fa-envelope"></i> البريد الإلكتروني</h3>
-                    <p>contact@example.com</p>
+                    <p>la_femme@gmail.com</p>
                 </div>
             </div>
         </div>
