--- a/about.html
+++ b/about.html
@@ -80,7 +80,10 @@
 </head>
 
 <body>
-
+<!--hash-->
+<div class="hash">
+    <h3>متاح التوصيل</h3>
+</div>
     <!-- Header -->
     <header class="header">
         <div class="container">
