--- a/index.html
+++ b/index.html
@@ -159,12 +159,12 @@
       </div>
   
       <div class="product-cards">
-        <img src="img/LAFEMME_FOR_SHOSE/b1.jpg" alt="منتج 5">
+        <img src="img/LAFEMME FOR SHOSE/b1.jpg" alt="منتج 5">
         <h3> حقائب حديثة ومختلفة</h3>
       </div>
   
       <div class="product-cards">
-        <img src="img/LAFEMME_FOR_SHOSE/sh1.jpg" alt="منتج 6">
+        <img src="img/LAFEMME FOR SHOSE/sh1.jpg" alt="منتج 6">
         <h3> احذية مناسبة لذوقك</h3>
       </div>
   
